* BTitleView now resizes its columns asynchronously. As a side-effect, this   also solves the slow resizing part of bug #160 under Haiku (where GetMouse()   obviously gets a lot more messages). * Rearranged the interaction between BTitleView and ColumnTrackState a bit,   removed some unused cruft. * PoseView::ResizeColumn() had obviously required code to redraw the resizing   lines on enlarging the column excluded for whatever reason. * Minor cleanup.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@22025 a95241bf-73f2-0310-859d-f6bbb57e9c96